--- a/styles/partials/layout.css
+++ b/styles/partials/layout.css
@@ -11,9 +11,8 @@
 .header {
   text-align: center;
   width: 100%;
-  height: auto;
+  height: 80px;
   background-color: #00796b;
-  color: #ffd54f;
   font-size: 1.3em;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -28,7 +27,6 @@
 }
 
 .header > h1:nth-child(1) {
-  color: #ffd54f;
   font-family: sans-serif;
 }
 
@@ -73,8 +71,9 @@
 .m-1:after {
   content: '';
   display: block;
-  margin: auto;
-  height: 1px;
+  bottom: 0;
+  left: 0;
+  height: 4px;
   width: 0;
   background: transparent;
   -webkit-transition: width .5s ease, background-color .5s ease;
@@ -82,8 +81,8 @@
 }
 
 .m-1:hover:after {
-  width: 90%;
-  background: #444;
+  width: 100%;
+  background: grey;
 }
 
 .title-m2-1 > a:nth-child(1) {
@@ -113,7 +112,7 @@ li {
 }
 
 #bas {
-  height: 50px;
+  height: 80px;
   background-color: #00796b;
   color: #ffd54f;
   left: 0;
