--- a/styles/partials/layout.scss
+++ b/styles/partials/layout.scss
@@ -9,16 +9,14 @@
 .header{
     text-align: center;
     width: 100%;
-    height:auto;
+    height:80px;
     background-color: #00796b;
-    color:#ffd54f;
     font-size:1.3em;
     display:flex;
     flex-direction: column;
     justify-content: center;
 }
 .header > h1:nth-child(1) {
-    color: #ffd54f;
     font-family: sans-serif;
   }
   .titre{
@@ -49,15 +47,16 @@
  .m-1:after {
     content: '';
     display: block;
-    margin: auto;
-    height: 1px;
+    bottom: 0;
+    left: 0;
+    height: 4px;
     width: 0;
     background: transparent;
     transition: width .5s ease, background-color .5s ease;
 }
  .m-1:hover:after {
-    width: 90%;
-    background: #444;
+    width: 100%;
+    background: grey;
 }
 .title-m2-1 > a:nth-child(1){
   color:#c77800;
@@ -82,7 +81,7 @@
     font-size: 0.8em;
   }
   #bas{
-    height: 50px;
+    height: 80px;
     background-color: #00796b;
     color:#ffd54f; 
     left: 0; 
