--- a/styles/partials/menu2.scss
+++ b/styles/partials/menu2.scss
@@ -2,7 +2,7 @@
 
 #container-m-2{
   width: 100%;
-  height: 1650px;
+  height: 1750px;
 }
 
 #carte-m2 {
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   width: 90%;
-  height: 1300px;
+  height: 1400px;
   margin: auto;
   -webkit-margin-bottom-collapse: separate;
 }
@@ -106,12 +106,7 @@
     align-self: center;
     margin: auto;
   }
-  .light-m2 {
-    display: flex;
-    justify-content: center;
-    margin-top: 30px;
-    width: 100%;
-  }
+ 
   .gradient-m2 {
     font-size: 4em;
     display: inline-flex;
@@ -119,7 +114,7 @@
     margin: auto;
     width: 100%;
   }
-  @supports (mix-blend-mode: lighten) {
+
     .gradient-m2 {
       position: relative;
       color: #000;
@@ -137,15 +132,14 @@
         background: linear-gradient(to right, #c77800, #c77800, #faaa54, #ba68c8, #9c6996, #8559da);
       mix-blend-mode: screen;
     }
-  }
 
-.li-m2-1,.title-m2-1{
+.li-m2-1{
   color: #c77800;
 }
-.li-m2-2,.title-m2-2{
+.li-m2-2{
   color: #ba68c8;
 }
-.li-m2-3, .title-m2-3{
+.li-m2-3{
   color: #3f51b5;
 }
 .entree-m2 .plat-m2 .dessert-m2{
