--- a/styles/partials/mentions.css
+++ b/styles/partials/mentions.css
@@ -1,6 +1,6 @@
-#bloc-page {
+#bloc-page-mention {
   width: 100%;
-  height: auto;
+  height: 900px;
   margin: 0;
 }
 
@@ -11,6 +11,11 @@
 
 p {
   padding: 10px;
+}
+
+.important {
+  font-size: 2em;
+  color: red;
 }
 
 @media screen and (max-width: 870px) {
