--- a/styles/partials/mentions.scss
+++ b/styles/partials/mentions.scss
@@ -1,6 +1,6 @@
-#bloc-page{
+#bloc-page-mention{
     width: 100%;
-    height: auto;
+    height: 900px;
     margin:0;
   }
  #container-mentions{
@@ -10,6 +10,11 @@
  p{
      padding:10px;
  }
+ .important{
+     font-size:2em; 
+     color: red; 
+ }
+ 
 
  @media screen and (max-width: 870px){
     #container-mentions {
