--- a/styles/partials/menu1.css
+++ b/styles/partials/menu1.css
@@ -169,9 +169,10 @@ li {
   }
   #container-m1 {
     width: 100%;
-    font-family: fantasy;
-    margin-bottom: 30px;
-    padding-bottom: 0;
+    height: 2350px;
+  }
+  .carte-m1 {
+    height: 2100px;
   }
   .prix {
     float: none;
@@ -202,7 +203,7 @@ li {
   }
   .carte-m1 {
     width: 100%;
-    height: 1750px;
+    height: 2100px;
     margin: 0;
     padding: 0;
   }
