--- a/styles/partials/menu1.scss
+++ b/styles/partials/menu1.scss
@@ -122,9 +122,10 @@
     }
     #container-m1 {
       width: 100%;
-      font-family: fantasy;
-      margin-bottom: 30px;
-      padding-bottom: 0;
+      height: 2350px;
+    }
+    .carte-m1{
+        height: 2100px;
     }
       .prix {
          float: none;
@@ -148,7 +149,7 @@
      }
      .carte-m1{
          width: 100%;
-         height: 1750px;
+         height: 2100px;
          margin:0;
          padding:0;
      }
