--- a/styles/partials/menu2.scss
+++ b/styles/partials/menu2.scss
@@ -2,7 +2,7 @@
 
 #container-m-2{
   width: 100%;
-  height: 1750px;
+  height: 1900px;
 }
 
 #carte-m2 {
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   width: 90%;
-  height: 1400px;
+  height: 1550px;
   margin: auto;
   -webkit-margin-bottom-collapse: separate;
 }
@@ -155,14 +155,15 @@ li {
 
 
 @media (max-width: 870px){
-  #container-m2{
-    width: 100%;;
+  #container-m-2{
+    width: 100%;
+    height: 2100px;
     margin:0;
     padding: 0;
   }
   #carte-m2{
     width:100%;
-    height:1750px;
+    height:1850px;
   }
   .gradient-m2{
     margin:0;
