--- a/styles/partials/mentions.css
+++ b/styles/partials/mentions.css
@@ -1,3 +1,4 @@
+/*mentions legales*/
 #bloc-page-mention {
   width: 100%;
   height: 900px;
@@ -24,4 +25,6 @@ p {
     text-align: center;
   }
 }
+
+/*mentions legales*/
 /*# sourceMappingURL=mentions.css.map */
