--- a/styles/partials/maquette.scss
+++ b/styles/partials/maquette.scss
@@ -1,4 +1,6 @@
+/*index*/
 
+/*container index*/
 html,body{
     font-family: sans-serif;
     width:100%;
@@ -11,17 +13,9 @@ html,body{
     margin:0;
     height: auto;
 }
+/*container index*/
 
-#box1{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    flex-direction:row;
-    width: 80%;
-    margin: auto;
-    justify-content: space-around;
-}
-
+/*header index*/
 .header1{
     text-align: center;
     width: 100%;
@@ -33,120 +27,10 @@ html,body{
     flex-direction: column;
     justify-content: center;
 }
+/*header index*/
 
-.menu{
-    width:100%;
-    height: auto;
-    -webkit-transition:-webkit-transform .9s; // Chrome Safari
-    -moz-transition:-moz-transform .9s;       // Mozilla
-    -o-transition:-o-transform .9s;           // Opéra
-    -ms-transition:-ms-transform .9s;         // IE
-    transition:transform 1.5s;
-}
-
-#box1 img:hover{
-    width: 100%;
-    /* L'image est grossie de 15% */
-    -webkit-transform:scale(1.15); /* Safari et Chrome */
-    -moz-transform:scale(1.15); /* Firefox */
-    -ms-transform:scale(1.15); /* Internet Explorer 9 */
-    -o-transform:scale(1.15); /* Opera */
-    transform:scale(1.15);
-    opacity: 0.6;
-  }
-  span{
-    margin-top: -5px;
-  }
-  @keyframes thing{
-    0%{ margin:0}
-    15% {margin-top:-2px;}
-    33%{ margin-left:-5px;}
-    45%{margin-top: 2px; }
-    66%{ margin-left:5px;}
-    100%{ margin:0;}
-    
-    0%{ margin:0}
-    15% {margin-top:-2px;}
-    33%{ margin-right:-5px;}
-    45%{margin-top: 2px; }
-    66%{ margin-right:5px;}
-    100%{ margin:0;}
-  }
-
-
-.bientot{
-    font-size: 2.1em;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    color:#ffd54f;
-    border: 2px dotted #00796b;
-    background-color: #00796b;
-    border-radius: 10px;
-    width: 33%;
-    margin: 30px auto 100px auto;
-    height: auto;
-  }
-
-  .menu {
-    margin: 30px auto 30px auto;
-    border: solid 1px #cfcfcf;
-    width: 40%;
-    height: 750px;
-    overflow: hidden;
-    }
-  
-    .menu img {
-    width:100%;
-    height:100%;
-    }
-    .menu img:hover {
-    transition: 0.9s;
-    width:100%;
-    height:700px;
-    }
-
-  @keyframes dots{
-    0%{margin-top:0;}
-    50%{margin-top:-5px;}
-    100%{margin-top:0}
-  }
-  .bientot span:first-child{
-    animation:dots 1.5s infinite;
-  }
-
-  .bientot span:nth-child(2){
-    animation:dots 1.5s infinite;
-    animation-delay: 0.5s;
-  }
-
-  .bientot span:last-child{
-    animation:dots 1.5s infinite;
-    animation-delay: 1s;
-  }
-  
-  #searchbar{
-    position:relative; 
-    width:100%;
-     height:auto;
-  }
-.formulaire{
-  display:inline-block;
-  width:100%;
-}
-.formulaire .champ{
-  width:100%; 
-  height:35px;
-}
-.champ {
-  padding-right: 0px;
-  padding-left: 0px;
-  border-right-width: 0px;
-  border-right-style: solid;
-  border-left-width: 0px;
-  border-left-style: solid;
- }
- .recherche .iconloupe {
+/*barre de recherche index*/
+.recherche .iconloupe {
   background:url(http://www.larevuedekenza.fr/wp-content/themes/quarter/images/sidebar/loupe.png) no-repeat 0 0;
   }
     
@@ -159,56 +43,126 @@ html,body{
   display:block;
   padding-left:30px;
   }
+
   .recherche {
  background-color: white;
  height: 30px;
  border: solid 1px grey;
 }
 
-.iconloupe{
-  float:left;
+  .iconloupe{
+ float:left;
+}
+/*barre de recherche index*/
+
+/*box + zoom sur image*/
+#box1{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  flex-direction:row;
+  width: 80%;
+  margin: auto;
+  justify-content: space-around;
 }
 
+#box1 img:hover{
+  width: 100%;
+  /* L'image est grossie de 15% */
+  -webkit-transform:scale(1.15); /* Safari et Chrome */
+  -moz-transform:scale(1.15); /* Firefox */
+  -ms-transform:scale(1.15); /* Internet Explorer 9 */
+  -o-transform:scale(1.15); /* Opera */
+  transform:scale(1.15);
+  opacity: 0.6;
+}
+
+.menu{
+  width:100%;
+  height: auto;
+  -webkit-transition:-webkit-transform .9s; // Chrome Safari
+  -moz-transition:-moz-transform .9s;       // Mozilla
+  -o-transition:-o-transform .9s;           // Opéra
+  -ms-transition:-ms-transform .9s;         // IE
+  transition:transform 1.5s;
+}
+
+.menu {
+  margin: 30px auto 30px auto;
+  border: solid 1px #cfcfcf;
+  width: 40%;
+  height: 750px;
+  overflow: hidden;
+  }
+
+  .menu img {
+  width:100%;
+  height:100%;
+  }
+  .menu img:hover {
+  transition: 0.9s;
+  width:100%;
+  height:700px;
+  }
+/*box + zoom sur image*/
+
+/*prochainement + animation points*/
+.bientot{
+  font-size: 2.1em;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  color:#ffd54f;
+  border: 2px dotted #00796b;
+  background-color: #00796b;
+  border-radius: 10px;
+  width: 33%;
+  margin: 30px auto 100px auto;
+  height: auto;
+}
+
+@keyframes dots{
+  0%{margin-top:0;}
+  50%{margin-top:-5px;}
+  100%{margin-top:0}
+}
+.bientot span:first-child{
+  animation:dots 1.5s infinite;
+}
+
+.bientot span:nth-child(2){
+  animation:dots 1.5s infinite;
+  animation-delay: 0.5s;
+}
+
+.bientot span:last-child{
+  animation:dots 1.5s infinite;
+  animation-delay: 1s;
+}
+
+span{
+  margin-top: -5px;
+}
+/*prochainement + animation points*/
+
+/*responsive index*/
 @media screen and (max-width: 1150px){
   #box1{
     flex-direction: column;
   }
   .menu{
     width: 100%;
+    height: auto;
   }
-  .menu img{
-    height:100%;
-  }
-  #box1 img:hover{
-    width: 100%;
-    height: 100%;
-    /* L'image est grossie de 15% */
-    -webkit-transform:scale(1.15); /* Safari et Chrome */
-    -moz-transform:scale(1.15); /* Firefox */
-    -ms-transform:scale(1.15); /* Internet Explorer 9 */
-    -o-transform:scale(1.15); /* Opera */
-    transform:scale(1.15);
-    opacity: 0.8;
-  }
-  .menu{
-    width:100%;
-    -webkit-transition:-webkit-transform .9s; // Chrome Safari
-    -moz-transition:-moz-transform .9s;       // Mozilla
-    -o-transition:-o-transform .9s;           // Opéra
-    -ms-transition:-ms-transform .9s;         // IE
-    transition:transform 1.5s;
-  margin: 30px auto 30px auto;
-  border: solid 1px #cfcfcf;
-  overflow: hidden;
-  }
+  
   .bientot{
     width:60%;
     font-size: 1.5em;
   }
-  .header{
-    height:auto;
-  }
 }
+/*responsive index*/
+
+/*index*/
 
  
    
