--- a/styles/partials/mentions.scss
+++ b/styles/partials/mentions.scss
@@ -1,3 +1,4 @@
+/*mentions legales*/
 #bloc-page-mention{
     width: 100%;
     height: 900px;
@@ -22,3 +23,4 @@
         text-align: center;
       }
  }
+ /*mentions legales*/
