--- a/styles/partials/menu1.css
+++ b/styles/partials/menu1.css
@@ -1,3 +1,4 @@
+/*menu1*/
 #container-m1 {
   width: 100%;
   height: 1650px;
@@ -7,6 +8,32 @@
   margin: 0;
   background-color: #fff;
   height: 100%;
+}
+
+.carte-m1 {
+  font-family: 'Neucha', cursive;
+  position: relative;
+  width: 90%;
+  height: 1300px;
+  margin: auto;
+  background-color: #ffebee;
+  -webkit-margin-bottom-collapse: separate;
+}
+
+/*haut menu1*/
+.entete {
+  text-align: center;
+  padding-top: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .note1 {
@@ -20,6 +47,67 @@
       align-self: center;
   width: 90px;
   height: 90px;
+}
+
+.titrem1 {
+  font-size: 4em;
+  color: #4e342e;
+  margin: 30px 0px;
+  font-weight: lighter;
+}
+
+/*haut menu1*/
+/*listes des plats menu1*/
+.essaie {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 0;
+  width: 100%;
+  vertical-align: middle;
+}
+
+.separateur-m1 {
+  width: 33%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: center;
+      align-self: center;
+  height: 70px;
+  margin: auto;
+}
+
+.title:before {
+  content: "";
+  left: 0;
+  right: 0;
+  height: 2px;
+  position: absolute;
+  top: calc(50% - 1px);
+}
+
+li {
+  color: #4e342e;
+}
+
+/*listes des plats menu1*/
+/*bas menu1*/
+.bas-m1 {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
 }
 
 .note2 {
@@ -48,114 +136,8 @@
   font-size: 1.8em;
 }
 
-.carte-m1 {
-  font-family: 'Neucha', cursive;
-  position: relative;
-  width: 90%;
-  height: 1300px;
-  margin: auto;
-  background-color: #ffebee;
-  -webkit-margin-bottom-collapse: separate;
-}
-
-.titrem1 {
-  font-size: 4em;
-  color: #4e342e;
-  margin: 30px 0px;
-  font-weight: lighter;
-}
-
-.essaie {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-top: 0;
-  width: 100%;
-  vertical-align: middle;
-}
-
-.separateur-m1 {
-  width: 33%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-item-align: center;
-      align-self: center;
-  height: 70px;
-  margin: auto;
-}
-
-.bas-m1 {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 100%;
-}
-
-.entete {
-  text-align: center;
-  padding-top: 50px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.titre-m1 {
-  font-weight: lighter;
-  font-size: 2.4em;
-  color: #4e342e;
-  margin: 0;
-}
-
-.title-m1 {
-  text-align: center;
-  font-weight: normal;
-  font-size: 1.3em;
-  font-family: 'Luminari', fantasy;
-  color: #4e342e;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.fa, .fas {
-  font-weight: 900;
-  margin-right: 5px;
-}
-
-li {
-  color: #4e342e;
-}
-
-.title:before {
-  content: "";
-  left: 0;
-  right: 0;
-  height: 2px;
-  position: absolute;
-  top: calc(50% - 1px);
-}
-
+/*bas menu1*/
+/*menu1 responsive*/
 @media screen and (max-width: 870px) {
   .title-m1 {
     margin: auto;
@@ -214,4 +196,6 @@ li {
     margin: 10px auto;
   }
 }
+
+/*menu1 responsive*/
 /*# sourceMappingURL=menu1.css.map */
