--- a/styles/partials/menu2.css
+++ b/styles/partials/menu2.css
@@ -1,3 +1,4 @@
+/*menu2*/
 #container-m-2 {
   width: 100%;
   height: 1900px;
@@ -34,120 +35,7 @@
           flex-direction: column;
 }
 
-.m-2, .m-3, .m-4 {
-  margin: auto;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
-  font-size: 2.5em;
-  font-weight: lighter;
-  -webkit-text-size-adjust: auto;
-}
-
-.m-2:after {
-  content: '';
-  display: block;
-  margin: auto;
-  height: 1px;
-  width: 0;
-  background: transparent;
-  -webkit-transition: width .5s ease, background-color .5s ease;
-  transition: width .5s ease, background-color .5s ease;
-}
-
-.m-2:hover:after {
-  width: 90%;
-  background: #444;
-}
-
-.m-3:after {
-  content: '';
-  display: block;
-  margin: auto;
-  height: 1px;
-  width: 0;
-  background: transparent;
-  -webkit-transition: width .5s ease, background-color .5s ease;
-  transition: width .5s ease, background-color .5s ease;
-}
-
-.m-3:hover:after {
-  width: 90%;
-  background: #444;
-}
-
-.m-4:after {
-  content: '';
-  display: block;
-  margin: auto;
-  height: 1px;
-  width: 0;
-  background: transparent;
-  -webkit-transition: width .5s ease, background-color .5s ease;
-  transition: width .5s ease, background-color .5s ease;
-}
-
-.m-4:hover:after {
-  width: 90%;
-  background: #444;
-}
-
-.m-2 {
-  color: #c77800;
-}
-
-.m-3 {
-  color: #ba68c8;
-}
-
-.m-4 {
-  color: #8559da;
-}
-
-.ul-m2 {
-  font-size: 1.9em;
-  padding: 0;
-  margin: 60px;
-  list-style: none;
-}
-
-.englobe-m2 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-item-align: center;
-      align-self: center;
-  width: 100%;
-  margin: 70px auto;
-}
-
-.liste-m2 {
-  padding-bottom: 50px;
-}
-
-.icon-m2, .icon-m2-2 {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  vertical-align: middle;
-  width: 33%;
-  height: 15px;
-  -ms-flex-item-align: center;
-      align-self: center;
-  margin: auto;
-}
-
+/*haut menu2*/
 .gradient-m2 {
   font-size: 4em;
   display: -webkit-inline-box;
@@ -179,6 +67,67 @@
   mix-blend-mode: screen;
 }
 
+/*haut menu2*/
+/*communs menu2*/
+.entree-m2 .plat-m2 .dessert-m2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: 3%;
+}
+
+.englobe-m2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-item-align: center;
+      align-self: center;
+  width: 100%;
+  margin: 70px auto;
+}
+
+.icon-m2, .icon-m2-2 {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  vertical-align: middle;
+  width: 33%;
+  height: 15px;
+  -ms-flex-item-align: center;
+      align-self: center;
+  margin: auto;
+}
+
+.m-2, .m-3, .m-4 {
+  margin: auto;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  font-size: 2.5em;
+  font-weight: lighter;
+  -webkit-text-size-adjust: auto;
+}
+
+li {
+  font-weight: lighter;
+  padding: 10px 0;
+}
+
 .li-m2-1 {
   color: #c77800;
 }
@@ -191,22 +140,86 @@
   color: #3f51b5;
 }
 
-.entree-m2 .plat-m2 .dessert-m2 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin-bottom: 3%;
+/*communs menu2*/
+/*entree menu2*/
+.ul-m2 {
+  font-size: 1.9em;
+  padding: 0;
+  margin: 60px;
+  list-style: none;
 }
 
-li {
-  font-weight: lighter;
-  padding: 10px 0;
+.liste-m2 {
+  padding-bottom: 50px;
 }
 
+.m-2:after {
+  content: '';
+  display: block;
+  margin: auto;
+  height: 1px;
+  width: 0;
+  background: transparent;
+  -webkit-transition: width .5s ease, background-color .5s ease;
+  transition: width .5s ease, background-color .5s ease;
+}
+
+.m-2:hover:after {
+  width: 90%;
+  background: #444;
+}
+
+.m-2 {
+  color: #c77800;
+}
+
+/*entree menu2*/
+/*plats menu2*/
+.m-3:after {
+  content: '';
+  display: block;
+  margin: auto;
+  height: 1px;
+  width: 0;
+  background: transparent;
+  -webkit-transition: width .5s ease, background-color .5s ease;
+  transition: width .5s ease, background-color .5s ease;
+}
+
+.m-3:hover:after {
+  width: 90%;
+  background: #444;
+}
+
+.m-3 {
+  color: #ba68c8;
+}
+
+/*plats menu2*/
+/*desserts menu2*/
+.m-4 {
+  color: #8559da;
+}
+
+.m-4:after {
+  content: '';
+  display: block;
+  margin: auto;
+  height: 1px;
+  width: 0;
+  background: transparent;
+  -webkit-transition: width .5s ease, background-color .5s ease;
+  transition: width .5s ease, background-color .5s ease;
+}
+
+.m-4:hover:after {
+  width: 90%;
+  background: #444;
+}
+
+/*desserts menu2*/
+/*listes des plats menu2*/
+/*menu2 responsive*/
 @media (max-width: 870px) {
   #container-m-2 {
     width: 100%;
@@ -261,4 +274,6 @@ li {
     padding: 5px;
   }
 }
+
+/*menu2 responsive*/
 /*# sourceMappingURL=menu2.css.map */
