--- a/styles/partials/menu2.scss
+++ b/styles/partials/menu2.scss
@@ -1,5 +1,4 @@
-
-
+/*menu2*/
 #container-m-2{
   width: 100%;
   height: 1900px;
@@ -23,6 +22,55 @@
   display:flex;
   flex-direction: column;
 }
+/*haut menu2*/
+.gradient-m2 {
+  font-size: 4em;
+  display: inline-flex;
+  justify-content: center;
+  margin: auto;
+  width: 100%;
+}
+  .gradient-m2 {
+    position: relative;
+    color: #000;
+    background: #fff;
+    mix-blend-mode: multiply;
+  }
+  .gradient-m2::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: -webkit-gradient(linear, left top, right top, from(#c77800), color-stop(#faaa54), color-stop(#ba68c8), color-stop(#ba68c8), to(#8559da));
+      background: linear-gradient(to right, #c77800, #c77800, #faaa54, #ba68c8, #9c6996, #8559da);
+    mix-blend-mode: screen;
+  }
+  /*haut menu2*/
+
+  /*communs menu2*/
+  .entree-m2 .plat-m2 .dessert-m2{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 3%;
+  }
+  .englobe-m2{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-self: center;
+    width:100%;
+    margin: 70px auto;
+  }
+  .icon-m2, .icon-m2-2{
+    display: inline-flex;
+    vertical-align: middle;
+    width: 33%;
+    height: 15px;
+    align-self: center;
+    margin: auto;
+  }
   .m-2, .m-3, .m-4{
     margin: auto;
     justify-content:center;
@@ -32,6 +80,33 @@
     font-weight: lighter;
     -webkit-text-size-adjust: auto;
   }
+  li {
+    font-weight: lighter;
+    padding: 10px 0;
+  }
+  .li-m2-1{
+    color: #c77800;
+  }
+  .li-m2-2{
+    color: #ba68c8;
+  }
+  .li-m2-3{
+    color: #3f51b5;
+  }
+  /*communs menu2*/
+
+  /*entree menu2*/
+  .ul-m2{
+    font-size: 1.9em;
+    padding:0;
+    margin: 60px;
+    list-style: none;
+    }
+ 
+   .liste-m2{
+     padding-bottom:50px;
+   }
+
   .m-2:after {
     content: '';
     display: block;
@@ -45,6 +120,12 @@
     width: 90%;
     background: #444;
 }
+.m-2 {
+  color:#c77800;
+}
+/*entree menu2*/
+
+/*plats menu2*/
 .m-3:after {
   content: '';
   display: block;
@@ -58,6 +139,16 @@
   width: 90%;
   background: #444;
 }
+.m-3 {
+  color: #ba68c8;
+ }
+ /*plats menu2*/
+
+ /*desserts menu2*/
+ .m-4 {
+  color: #8559da;
+}
+
 .m-4:after {
   content: '';
   display: block;
@@ -67,93 +158,16 @@
   background: transparent;
   transition: width .5s ease, background-color .5s ease;
 }
+
 .m-4:hover:after {
   width: 90%;
   background: #444;
 }
-  .m-2 {
-    color:#c77800;
-  }
-  .m-3 {
-    color: #ba68c8;
-   }
-   .m-4 {
-    color: #8559da;
-   }
-   .ul-m2{
-   font-size: 1.9em;
-   padding:0;
-   margin: 60px;
-   list-style: none;
-   }
 
-  .englobe-m2{
-    display:flex;
-    flex-direction: row;
-    justify-content: center;
-    align-self: center;
-    width:100%;
-    margin: 70px auto;
-  }
-  .liste-m2{
-    padding-bottom:50px;
-  }
-  .icon-m2, .icon-m2-2{
-    display: inline-flex;
-    vertical-align: middle;
-    width: 33%;
-    height: 15px;
-    align-self: center;
-    margin: auto;
-  }
- 
-  .gradient-m2 {
-    font-size: 4em;
-    display: inline-flex;
-    justify-content: center;
-    margin: auto;
-    width: 100%;
-  }
+/*desserts menu2*/
+/*listes des plats menu2*/
 
-    .gradient-m2 {
-      position: relative;
-      color: #000;
-      background: #fff;
-      mix-blend-mode: multiply;
-    }
-    .gradient-m2::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      background: -webkit-gradient(linear, left top, right top, from(#c77800), color-stop(#faaa54), color-stop(#ba68c8), color-stop(#ba68c8), to(#8559da));
-        background: linear-gradient(to right, #c77800, #c77800, #faaa54, #ba68c8, #9c6996, #8559da);
-      mix-blend-mode: screen;
-    }
-
-.li-m2-1{
-  color: #c77800;
-}
-.li-m2-2{
-  color: #ba68c8;
-}
-.li-m2-3{
-  color: #3f51b5;
-}
-.entree-m2 .plat-m2 .dessert-m2{
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 3%;
-}
-
-li {
-  font-weight: lighter;
-  padding: 10px 0;
-}
-
-
+/*menu2 responsive*/
 @media (max-width: 870px){
   #container-m-2{
     width: 100%;
@@ -200,5 +214,5 @@ li {
     margin: auto;
     padding: 5px;
   }
-
 }
+/*menu2 responsive*/
