--- a/styles/partials/menu3.css
+++ b/styles/partials/menu3.css
@@ -1,3 +1,4 @@
+/*menu3*/
 #container-m-3 {
   height: 1600px;
 }
@@ -9,15 +10,72 @@
   background-color: #e5ffff;
 }
 
-.title-m3 {
-  color: black;
-  font-weight: lighter;
-  margin: 0;
-  display: inline;
-  padding-top: 20px;
-  margin: 0px 30px;
+/*commun menu3*/
+.bloc {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: row;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  word-break: normal;
 }
 
+.entree, .plat, .dessert {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  width: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  word-break: normal;
+  margin-bottom: 60px;
+}
+
+/*commun menu3*/
+/*haut menu3*/
+.gradient-m3 {
+  font-size: 4em;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: auto;
+  width: 100%;
+}
+
+.gradient-m3 {
+  position: relative;
+  color: #000;
+  background: #fff;
+  mix-blend-mode: multiply;
+}
+
+.gradient-m3::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: -webkit-gradient(linear, left top, right top, from(#0d47a1), color-stop(#0d47a1), color-stop(#1e88e5), color-stop(#64b5f6), to(#64b5f6));
+  background: linear-gradient(to right, #0d47a1, #0d47a1, #1e88e5, #64b5f6, #64b5f6);
+  mix-blend-mode: screen;
+}
+
+/*haut menu3*/
+/*separateurs menu3*/
 .btn {
   border: solid 5px #0d47a1;
   border-top: 0px;
@@ -133,84 +191,8 @@
   align-self: center;
 }
 
-.bloc {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-direction: row;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-          flex-direction: column;
-  word-break: normal;
-}
-
-.entree, .plat, .dessert {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  width: 100%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  word-break: normal;
-  margin-bottom: 60px;
-}
-
-#light-m3 {
-  margin-bottom: 30px;
-}
-
-.gradient-m3 {
-  font-size: 4em;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin: auto;
-  width: 100%;
-}
-
-.light-m3 {
-  padding: 40px 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin: 30px;
-  width: 100%;
-}
-
-@supports (mix-blend-mode: lighten) {
-  .gradient-m3 {
-    position: relative;
-    color: #000;
-    background: #fff;
-    mix-blend-mode: multiply;
-  }
-  .gradient-m3::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background: -webkit-gradient(linear, left top, right top, from(#0d47a1), color-stop(#0d47a1), color-stop(#1e88e5), color-stop(#64b5f6), to(#64b5f6));
-    background: linear-gradient(to right, #0d47a1, #0d47a1, #1e88e5, #64b5f6, #64b5f6);
-    mix-blend-mode: screen;
-  }
-}
-
+/*separateurs menu3*/
+/*responsive menu3*/
 @media screen and (max-width: 1500px) {
   .m-1 {
     font-size: 1.8em;
@@ -295,4 +277,7 @@
     font-size: 1.3em;
   }
 }
+
+/*responsive menu3*/
+/*menu3*/
 /*# sourceMappingURL=menu3.css.map */
