--- a/styles/partials/menu3.scss
+++ b/styles/partials/menu3.scss
@@ -1,4 +1,4 @@
-   
+/*menu3*/  
 #container-m-3{
   height: 1600px;
 }
@@ -9,16 +9,54 @@
   margin: 50px auto;
   background-color: #e5ffff;
 }
-
-.title-m3 {
-  color:black;
-  font-weight: lighter;
-  margin:0;
-  display:inline;
-  padding-top: 20px;
-  margin: 0px 30px;
+/*commun menu3*/
+.bloc {
+  display: flex;
+  -ms-flex-direction: row;
+  flex-direction: column;
+  word-break: normal;
 }
 
+.entree, .plat, .dessert {
+  display: inline-flex;
+  width: 100%;
+  align-items: center;
+  flex-direction: row;
+  justify-content: center;
+  word-break: normal;
+  margin-bottom: 60px;
+}
+/*commun menu3*/
+
+
+/*haut menu3*/
+.gradient-m3 {
+  font-size: 4em;
+  display: inline-flex;
+  justify-content: center;
+  margin: auto;
+  width: 100%;
+}
+.gradient-m3 {
+  position: relative;
+  color: #000;
+  background: #fff;
+  mix-blend-mode: multiply;
+}
+.gradient-m3::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: -webkit-gradient(linear, left top, right top, from(#0d47a1), color-stop(#0d47a1), color-stop(#1e88e5), color-stop(#64b5f6), to(#64b5f6));
+  background: linear-gradient(to right, #0d47a1, #0d47a1, #1e88e5, #64b5f6, #64b5f6);
+  mix-blend-mode: screen;
+}
+/*haut menu3*/
+
+/*separateurs menu3*/
 .btn {
   border: solid 5px #0d47a1;
   border-top: 0px;
@@ -110,62 +148,9 @@
   border-radius: 0px 0px 10px 0px;
   align-self: center;
 }
+/*separateurs menu3*/
 
-.bloc {
-  display: flex;
-  -ms-flex-direction: row;
-  flex-direction: column;
-  word-break: normal;
-
-}
-
-.entree, .plat, .dessert {
-  display: inline-flex;
-  width: 100%;
-  align-items: center;
-  flex-direction: row;
-  justify-content: center;
-  word-break: normal;
-  margin-bottom: 60px;
-}
-
-#light-m3 {
-  margin-bottom: 30px;
-}
-
-.gradient-m3 {
-  font-size: 4em;
-  display: inline-flex;
-  justify-content: center;
-  margin: auto;
-  width: 100%;
-}
-.light-m3 {
-  padding: 40px 0;
-  display: flex;
-  justify-content: center;
-  margin: 30px;
-  width: 100%;
-}
-@supports (mix-blend-mode: lighten) {
-  .gradient-m3 {
-    position: relative;
-    color: #000;
-    background: #fff;
-    mix-blend-mode: multiply;
-  }
-  .gradient-m3::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background: -webkit-gradient(linear, left top, right top, from(#0d47a1), color-stop(#0d47a1), color-stop(#1e88e5), color-stop(#64b5f6), to(#64b5f6));
-    background: linear-gradient(to right, #0d47a1, #0d47a1, #1e88e5, #64b5f6, #64b5f6);
-    mix-blend-mode: screen;
-  }
-}
+/*responsive menu3*/  
 @media screen and (max-width: 1500px){
   .m-1{
     font-size: 1.8em;
@@ -231,4 +216,6 @@
     font-size:1.3em;
   }
 }
+/*responsive menu3*/
+/*menu3*/
 
