--- a/styles/partials/maquette.scss
+++ b/styles/partials/maquette.scss
@@ -126,6 +126,7 @@ html,body{
   50%{margin-top:-5px;}
   100%{margin-top:0}
 }
+
 .bientot span:first-child{
   animation:dots 1.5s infinite;
 }
@@ -144,6 +145,24 @@ span{
   margin-top: -5px;
 }
 /*prochainement + animation points*/
+
+/*mentions + mail animés*/
+@keyframes thing{
+  0%{ margin:0}
+  15% {margin-top:-2px;}
+  33%{ margin-left:-5px;}
+  45%{margin-top: 2px; }
+  66%{ margin-left:5px;}
+  100%{ margin:0;}
+
+  0%{ margin:0}
+  15% {margin-top:-2px;}
+  33%{ margin-right:-5px;}
+  45%{margin-top: 2px; }
+  66%{ margin-right:5px;}
+  100%{ margin:0;}
+}
+/*mentions + mail animés*/
 
 /*responsive index*/
 @media screen and (max-width: 1150px){
