--- a/styles/partials/maquette.css
+++ b/styles/partials/maquette.css
@@ -96,10 +96,9 @@ html, body {
   width: 100%;
   height: auto;
   -webkit-transition: -webkit-transform .9s;
-  -webkit-transition: -webkit-transform 1.5s;
-  transition: -webkit-transform 1.5s;
-  transition: transform 1.5s;
-  transition: transform 1.5s, -webkit-transform 1.5s;
+  transition: -webkit-transform .9s;
+  transition: transform .9s;
+  transition: transform .9s, -webkit-transform .9s;
 }
 
 .menu {
