--- a/styles/partials/maquette.scss
+++ b/styles/partials/maquette.scss
@@ -84,7 +84,7 @@ html,body{
   -moz-transition:-moz-transform .9s;       // Mozilla
   -o-transition:-o-transform .9s;           // Opéra
   -ms-transition:-ms-transform .9s;         // IE
-  transition:transform 1.5s;
+  transition:transform .9s;
 }
 
 .menu {
