--- a/styles/partials/menu1.scss
+++ b/styles/partials/menu1.scss
@@ -12,7 +12,7 @@
         font-family: 'Neucha', cursive;
         position: relative;
         width: 90%;
-        height: 1300px;
+        height: auto;
         margin: auto;
         background-color: #ffebee;
         -webkit-margin-bottom-collapse: separate;
@@ -65,7 +65,7 @@
         top: calc(50% - 1px);
     }
     li{
-        color:#4e342e;
+        color:#424242;
         }
     /*listes des plats menu1*/
 
@@ -106,10 +106,7 @@
     }
     #container-m1 {
       width: 100%;
-      height: 2350px;
-    }
-    .carte-m1{
-        height: 2100px;
+      height: 2200px;
     }
       .prix {
          float: none;
@@ -133,7 +130,6 @@
      }
      .carte-m1{
          width: 100%;
-         height: 2100px;
          margin:0;
          padding:0;
      }
