--- a/styles/partials/style.css
+++ b/styles/partials/style.css
@@ -331,10 +331,9 @@ html, body {
   width: 100%;
   height: auto;
   -webkit-transition: -webkit-transform .9s;
-  -webkit-transition: -webkit-transform 1.5s;
-  transition: -webkit-transform 1.5s;
-  transition: transform 1.5s;
-  transition: transform 1.5s, -webkit-transform 1.5s;
+  transition: -webkit-transform .9s;
+  transition: transform .9s;
+  transition: transform .9s, -webkit-transform .9s;
 }
 
 .menu {
@@ -540,7 +539,7 @@ span {
   font-family: 'Neucha', cursive;
   position: relative;
   width: 90%;
-  height: 1300px;
+  height: auto;
   margin: auto;
   background-color: #ffebee;
   -webkit-margin-bottom-collapse: separate;
@@ -621,7 +620,7 @@ span {
 }
 
 li {
-  color: #4e342e;
+  color: #424242;
 }
 
 /*listes des plats menu1*/
@@ -677,10 +676,7 @@ li {
   }
   #container-m1 {
     width: 100%;
-    height: 2350px;
-  }
-  .carte-m1 {
-    height: 2100px;
+    height: 2200px;
   }
   .prix {
     float: none;
@@ -711,7 +707,6 @@ li {
   }
   .carte-m1 {
     width: 100%;
-    height: 2100px;
     margin: 0;
     padding: 0;
   }
@@ -1204,11 +1199,14 @@ li {
 }
 
 @media screen and (max-width: 870px) {
+  #container-m-3 {
+    height: 2150px;
+  }
   #carte-m3 {
     width: 100%;
     margin: 0;
-    margin-bottom: 30px;
-    height: 1600px;
+    padding-bottom: 30px;
+    height: auto;
   }
   .light-m3 {
     display: -webkit-box;
@@ -1264,7 +1262,7 @@ li {
   }
   .gradient-m3 {
     font-size: 2em;
-    margin: auto;
+    margin: 30px auto;
     text-align: center;
     padding: 0;
   }
@@ -1276,9 +1274,6 @@ li {
         -ms-flex-pack: center;
             justify-content: center;
     width: auto;
-  }
-  .li {
-    font-size: 1.3em;
   }
 }
 
@@ -1392,22 +1387,21 @@ li {
 /*responsive menu4*/
 @media screen and (max-width: 870px) {
   #container-m4 {
-    height: 1700px;
+    height: 2000px;
   }
   .gradient-m4 {
     font-size: 2em;
     text-align: center;
-    display: inline-block;
-    background: white;
-    color: black;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     position: relative;
-    margin: 0;
   }
   #carte-m4 {
     width: 100%;
     margin: 0;
-    margin-bottom: 30px;
-    padding: 0;
+    height: auto;
+    padding-bottom: 30px;
   }
   .block {
     -webkit-box-orient: vertical;
