--- a/styles/partials/style.css
+++ b/styles/partials/style.css
@@ -513,7 +513,7 @@ span {
   }
   .menu {
     width: 100%;
-    height: auto;
+    height: 100%;
   }
   .bientot {
     width: 60%;
@@ -1449,12 +1449,12 @@ li {
 /*mentions legales*/
 #bloc-page-mention {
   width: 100%;
-  height: 900px;
+  height: 1100px;
   margin: 0;
 }
 
 #container-mentions {
-  height: 700px;
+  height: auto;
   text-align: center;
 }
 
@@ -1463,13 +1463,13 @@ p {
 }
 
 .important {
-  font-size: 2em;
+  font-size: 1.5em;
   color: red;
 }
 
 @media screen and (max-width: 870px) {
   #container-mentions {
-    height: 1050px;
+    height: 1200px;
     text-align: center;
   }
 }
